# ball-machine

./: .gitignore  .gitmodules  README.md  build.zig  lint.py  lint.sh  shell.nix  suppressions.valgrind
src/: App.zig  Chamber.zig  ChamberTester.zig  Db.zig  EventLoop.zig  HttpClient.zig  Server.zig  ServerSimulation.zig  Simulation.zig  SimulationScheduler.zig  TcpServer.zig  TimerEvent.zig  c.zig  chamber.zig  circular_buffer.zig  future.zig  http.zig  http_test.zig  main.zig  physics.zig  simulation_c_api.zig  simulation_wasm.zig  test_chamber.zig  userinfo.zig  wasm_chamber.zig  zig_bindings_test.zig
src/chambers/: angled_platforms.zig  dude.zig  graphics.zig  platforms.zig  plinko.c  plugin_alloc.zig  pong.zig  shadow.zig  simple.zig  simple2.c  spinny_bar.zig  vacuum.zig
src/chambers/counter/: Cargo.toml  build.rs  physics.h
src/chambers/counter/.cargo/: config.toml
src/chambers/counter/src/: lib.rs  physics.rs
src/chambers/dude/: dude.blend  export_animation.py
src/chambers/vacuum/: stb_image.c
src/libphysics/: physics.h  physics_c_bindings.zig
src/res/: admin.html  admin.js  chamber_renderer.js  chamber_test.html  chamber_test.js  header.js  index.html  index.js  local_simulation.js  sanitize.js  simulation_renderer.js  upload.html  user.html  user.js  wasm.js  wasm_interface.h  water.css
test/: generate_test_db.zig  integration.py  test_runner.zig
tools/: bindings_gen.zig  generate_embedded_resources.zig
