[package]
name = "counter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]


[dependencies]

[build-dependencies]
bindgen = "0.69.4"

[profile.release]
lto = true
opt-level = 's'
debug = false
strip = "symbols"
